# translation_read_write_csv

./: .~lock.output.csv#  Cargo.toml  data.csv  go.csv  konsole.csv  output.csv  test.csv  xxx.txt
src/: main.rs  main.rs.bk  main_new.rs.bk  new.bk
