[package]
name = "read_csv"
version = "0.1.0"
authors = ["ismesunny <lorshousunny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = 'z'  # Optimize for size
lto = true # link-time optimization
codegen-units = 1 # reduce parallel codegen
panic = 'abort' # abort on panic

[dependencies]
csv = "1.1.3"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "1.1.1"
curl = "0.4.34"
serde = { version = "1.0.117", features = ["derive"] }